--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,20 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-moni-CF7D96B6-3171-4930-A8DA-F677FE856DF3;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-moni-CF7D96B6-3171-4930-A8DA-F677FE856DF3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "MailSettings": {
+        "Mail": "adrianedelen@gmail.com",
+        "DisplayName": "ZappitBugTracker",
+        "Password": "uxaptlulyxxeborh",
+        "Host": "smtp.gmail.com",
+        "port": 587
+    },
+    "AllowedHosts": "*"
 }
