user registration stuff

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
     },
     "MailSettings": {
         "Mail": "adrianedelen@gmail.com",
-        "DisplayName": "ZappitBugTracker",
+        "DisplayName": "moni Financial Portal",
         "Password": "uxaptlulyxxeborh",
         "Host": "smtp.gmail.com",
         "port": 587
