--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-moni-CF7D96B6-3171-4930-A8DA-F677FE856DF3;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=localhost; Port=5432; Database=Moni_Database; User Id=postgres; Password=Add!ctive!@"
     },
     "Logging": {
         "LogLevel": {
